# cargo

./: Cargo.toml
crates/cargo-util/: Cargo.toml
crates/cargo-util-schemas/: Cargo.toml
crates/crates-io/: Cargo.toml
crates/rustfix/: Cargo.toml
src/cargo/ops/: cargo_test.rs  mod.rs
