[package]
name = "cargo-util-schemas"
version = "0.10.1"
rust-version = "1.89"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rust-lang/cargo"
repository = "https://github.com/rust-lang/cargo"
description = "Deserialization schemas for Cargo"

[dependencies]
schemars = { version = "1.0.4", features = ["preserve_order", "semver1"], optional = true }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", optional = true }
serde-untagged = "0.1.7"
serde-value = "0.7.0"
thiserror = "2.0.12"
toml = { version = "0.9.5", features = ["serde"] }
unicode-xid = "0.2.6"
url = "2.5.4"

[lints]
workspace = true

[dev-dependencies]
snapbox = { version = "0.6.21", features = ["diff", "dir", "term-svg", "regex", "json"] }
serde_json.workspace = true

[features]
unstable-schema = ["dep:schemars", "dep:serde_json"]
